--- a/views/chat.html
+++ b/views/chat.html
@@ -10,7 +10,7 @@
 
 <head>
 
-	<title>Signing in | Nexcom</title>
+	<title>Signing in | Typer</title>
 
 	<link type="text/css" rel="stylesheet" href="../css/stylesheet.css" />
 	<link href="http://fonts.googleapis.com/css?family=Open+Sans Condensed:300italic,300,700" rel="stylesheet" type="text/css">
@@ -57,7 +57,7 @@
 			<img src="../img/unnamed.jpg" id="ownerImage" />
 
 			<div class="infoInside">
-				<h2>Chat with <span class="nickname-chat"></span></h2>
+				<h2>Typer with <span class="nickname-chat"></span></h2>
 				<br/>
 
 				<form class="loginForm">
@@ -73,8 +73,7 @@
 		<div class="invite-textfield">
 
 			<h2>So now we're gonna talk!</h2>
-			<h5>Alright sparky! Invite your <span>friend</span> to join you by sending them this page's URL. <br> Be sure to share it only with whom you want to communicate.</h5>
-
+			<h5>Alright sparky! Invite your <span>friend</span> to join you by sending them the URL of the page provided below. <br> Be sure to share it only with whom you want to Typer.</h5>
 			<div class="link">
 				<a title="Invite a friend" href="" id="link"></a>
 			</div>
@@ -86,15 +85,15 @@
 			<img src="../img/unnamed.jpg" id="leftImage" />
 
 			<div class="info">
-				<h2><span class="nickname-left"></span> has left this chat.</h2>
-				<h5>Why note invite somebody else by sending them this page.</h5>
+				<h2><span class="nickname-left"></span> has stopped Typering.</h2>
+				<h5>Why not invite somebody else by sending them this page.</h5>
 			</div>
 
 		</div>
 
 		<div class="toomanypeople">
 
-			<h2>Oh no! you can't join this chat :(</h2>
+			<h2>Oh no! you can't join this Typer session :(</h2>
 			<h5>There are already two people in it. Would you like to create a <a title="New Room" href="/create" id="room">new session</a>?</h5>
 
 		</div>
@@ -104,7 +103,7 @@
 			<img src="../img/unnamed.jpg" id="noMessagesImage" />
 
 			<div class="info">
-				<h2>You are chatting with <span class="nickname-chat"></span>.</h2>
+				<h2>You are Typering with <span class="nickname-chat"></span>.</h2>
 				<h5>Send them a message from the form below!</h5>
 			</div>
 
