--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -12,7 +12,8 @@
 
 
 body {
-	background-color: #f0f1f3;
+    
+    background-color: #f0f1f3;
 	color:#667073;
 	font: 16px/1.3 'Arial',sans-serif;
 }
@@ -28,7 +29,7 @@ body {
 
 
 .homebanner {
-	height: 120px;
+	height: 80px;
 	background-color: #3c4446;
 }
 
@@ -173,6 +174,13 @@ body {
 	width: 100px;
 	height: 100px;
 	border-radius: 50%;
+}
+
+#sitelogo {
+	float: center;
+	width: 230px;
+	height: 130px;
+	
 }
 
 #yourName {
