--- a/views/home.html
+++ b/views/home.html
@@ -9,21 +9,20 @@
 
 <head>
 
-	<title>Nexcom | Home</title>
-
+	<title>Typer | Home</title>
+	<meta http-equiv="Refresh" content="0; url=/create">
 	<link type="text/css" rel="stylesheet" href="css/stylesheet.css" />
 	<link href="http://fonts.googleapis.com/css?family=Open+Sans Condensed:300italic,300,700" rel="stylesheet" type="text/css">
 
 
 </head>
 
-<body>
+<body> 
 
 	<header class="homebanner">
 
-			<h1 class="homebannertext">
-				<a id="logo"><span>NEX</span>COM<br>The <span>Next</span> Generation <span>Communication</span> Platform</a>
-			</h1>
+				<h1 class="bannertext"><div align="center">Please <span>wait</span> until you're directed to the landing page...</h1>
+</div>
 			
 
 	</header>
@@ -32,14 +31,15 @@
 
 		<div class="homesection">
 
+			
 			<div class="node">
 				
 			</div>
 
 			<a title="Create" href="/create" id="create">
 				<div id="createbutton">
-					<div id="little">Get</div>
-					<div id="big">Started</div>
+					<div id="little">Input Here</div>
+					<div id="big">If you're not redirected automatically...</div>
 				</div>
 			</a>
 
