--- a/views/chat.html
+++ b/views/chat.html
@@ -10,25 +10,42 @@
 
 <head>
 
-	<title>Signing in | Typer</title>
+	<title>App | Typer</title>
 
 	<link type="text/css" rel="stylesheet" href="../css/stylesheet.css" />
 	<link href="http://fonts.googleapis.com/css?family=Open+Sans Condensed:300italic,300,700" rel="stylesheet" type="text/css">
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta name="description" content="" />
+		<meta name="keywords" content="" />
+		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
+		<script src="js/skel.min.js"></script>
+		<script src="js/init.js"></script>
+		<noscript>
+			<link rel="stylesheet" href="css/skel.css" />
+			<link rel="stylesheet" href="css/style.css" />
+			<link rel="stylesheet" href="css/style-wide.css" />
+			<link rel="stylesheet" href="css/style-noscript.css" />
+		</noscript>
+		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
+		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+
+
 
 
 </head>
 
-<body>
+<body class="loading">
+<div id="wrapper">
+			<div id="bg"></div>
+			<div id="overlay"></div>
+			<div id="main">
 
 	<header class="banner">
-
-		<h1 class="bannertext">
-			
-		</h1>
-
+	<div align="center"><a href="http://typer.im" class="bannerpic"></a></div>
 	</header>
 
 
+	
 	<section class="section">
 
 		<!-- These elements are displayed as white info cards in the middle of the screen -->
@@ -65,11 +82,9 @@
 					<input type="text" id="hisEmail" placeholder="Your email address" /><br/>
 					<input type="submit" id="hisEnter" value="CHAT" />
 				</form>
-
 			</div>
 
 		</div>
-
 		<div class="invite-textfield">
 
 			<h2>So now we're gonna talk!</h2>
