--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -13,9 +13,12 @@
 
 body {
     
-    background-color: #f0f1f3;
+    
 	color:#667073;
+	background-image: url('images/bg1.png');
 	font: 16px/1.3 'Arial',sans-serif;
+	
+}​
 }
 
 
@@ -30,13 +33,14 @@ body {
 
 .homebanner {
 	height: 80px;
-	background-color: #3c4446;
+	background-color: rgba(128,128,128,0.75);
+	
 }
 
 .homebannertext {
 	text-align:center;
 	padding-top: 35px;
-	font-family: 'Open Sans Condensed',serif;
+	font-family: url('Passion.ttf');
 	font-weight: bold;
 	color:white;
 }
@@ -58,19 +62,31 @@ body {
 
 
 .banner {
-	height: 70px;
-	background-color: #3c4446;
+	height: 80px;
+	background-color: rgba(128,128,128,0.49);
+	border-radius: 3px;
+	box-shadow:0px 3px 3px #1abc9c;
 	margin-bottom: 200px;
 }
 
 .bannertext {
 	text-align:center;
 	padding-top: 15px;
-	font-family: 'Open Sans Condensed',serif;
+	font-family: 'Arual';
 	font-weight: bold;
 	color:white;
-	font-size:25px;
+	font-size:40px;
 }
+
+
+.bannerpic {
+   content:url('/img/Typer_logo.svg');
+	padding-top: 5px;
+	width: 120px;
+	height: 80px;
+	
+}
+
 .bannertext span {
 	color: #d6441b;
 }
@@ -88,6 +104,7 @@ body {
 .homesection {
 	text-align:center;
 	margin-top:140px;
+	background-color: rgba(128,128,128,0.24);
 }
 
 .node {
@@ -110,12 +127,12 @@ body {
 #create {
 	width: 300px;
 	height: 100px;
-	background-color: #FF5050;
+	background-color: rgba(228,228,228,0.24); 
 	text-align:center;
 	display: block;
 	margin:0px auto;
 	border-radius: 3px;
-	box-shadow: 0px 5px 5px #e4e8e7;
+	box-shadow: 0px 3px 3px #e4e8e7;
 	text-decoration: none;
 	margin-bottom: 70px;
 	color: #eeffff;
@@ -155,10 +172,11 @@ body {
 	margin:0px auto;
 	width: 700px;
 	height: 400px;
-	background-color: #ffffff;
+	background-color: rgba(228,228,228,0.24);
 	border-radius: 3px;
-	box-shadow:0px 3px 3px #e3e4e6;
-	color: #637277;
+	box-shadow:0px 3px 3px #1abc9c;
+	color: #f6f7f7;
+	
 }
 .connected h2 {
 	padding-top: 20px;
@@ -217,9 +235,9 @@ body {
 	width: 110px;
 	height: 40px;
 	text-align:center;
-	background-color: #73b4d4;
+	background-color: #1abc9c;
 	border: none;
-	box-shadow: 3px 3px 3px #efedee;
+	box-shadow: 1px 1px 1px #1abc9c;
 	border-radius: 2px;
 	color:white;
 	font-weight: bold;
@@ -236,10 +254,10 @@ body {
 	margin:0px auto;
 	width: 700px;
 	height: 400px;
-	background-color: #ffffff;
+	background-color: rgba(228,228,228,0.29);
 	border-radius: 3px;
-	box-shadow:0px 3px 3px #e3e4e6;
-	color: #637277;
+	box-shadow:0px 1px 1px #1abc9c;
+	color: #f6f7f7;
 }
 .personinside h2 {
 	padding-top: 20px;
@@ -294,9 +312,9 @@ body {
 	width: 110px;
 	height: 40px;
 	text-align:center;
-	background-color: #73b4d4;
+	background-color: #1abc9c;
 	border: none;
-	box-shadow: 3px 3px 3px #efedee;
+	box-shadow: 1px 1px 1px #1abc9c;
 	border-radius: 2px;
 	color:white;
 	font-weight: bold;
@@ -313,10 +331,10 @@ body {
 	margin:0px auto;
 	width: 750px;
 	height: 300px;
-	background-color: #ffffff;
+	background-color: rgba(228,228,228,0.24);
 	border-radius: 3px;
-	box-shadow:0px 3px 3px #e3e4e6;
-	color: #637277;
+	box-shadow:0px 3px 3px #1abc9c;
+	color: #f6f7f7;
 }
 .invite-textfield h2 {
 	padding-top: 80px;
@@ -350,10 +368,10 @@ body {
 	margin:0px auto;
 	width: 750px;
 	height: 300px;
-	background-color: #ffffff;
+	background-color: rgba(228,228,228,0.24);
 	border-radius: 3px;
 	box-shadow:0px 3px 3px #e3e4e6;
-	color: #637277;
+	color: #f6f7f7;
 	margin-bottom: 400px;
 }
 .left h2 {
@@ -386,10 +404,10 @@ body {
 	margin:0px auto;
 	width: 750px;
 	height: 300px;
-	background-color: #ffffff;
+	background-color: rgba(228,228,228,0.24);
 	border-radius: 3px;
 	box-shadow:0px 3px 3px #e3e4e6;
-	color: #637277;
+	color: #f6f7f7;
 }
 .toomanypeople h2 {
 	padding-top: 100px;
@@ -415,10 +433,10 @@ body {
 	margin:0px auto;
 	width: 750px;
 	height: 300px;
-	background-color: #ffffff;
+	background-color: rgba(228,228,228,0.24);
 	border-radius: 3px;
-	box-shadow:0px 3px 3px #e3e4e6;
-	color: #637277;
+	box-shadow:0px 3px 3px #1abc9c;
+	color: #f9f9f9;
 	margin-bottom: 400px;
 }
 .nomessages h2 {
@@ -483,8 +501,8 @@ body {
 	width: 40%;
 	display: block;
 	margin:0px auto 650px;
-	background-color: #ffffff;
-	color: #637277;
+	background-color: rgba(228,228,228,0.24);
+	color: #f6f7f7;
 }
 
 .chats {
@@ -518,10 +536,10 @@ body {
 	min-width: 160px;
 	min-height: 10px;
 	max-width: 510px;
-	background-color: #FFF;
+	background-color: rgba(228,228,228,0.59);
 	border-radius: 3px;
-	box-shadow: 0px 3px 3px #E3E4E6;
-	color: #637277;
+	box-shadow: 0px 3px 3px #1abc9c;
+	color: #f6f7f7;
 	line-height: 1.4;
 	word-wrap: break-word;
 }
@@ -536,10 +554,10 @@ body {
 	min-width: 160px;
 	min-height: 10px;
 	max-width: 510px;
-	background-color: #FFF;
+	background-color: rgba(228,228,228,0.59);
 	border-radius: 3px;
-	box-shadow: 0px 3px 3px #E3E4E6;
-	color: #637277;
+	box-shadow: 0px 1px 1px #e00052;
+	color: #f6f7f7;
 	line-height: 1.4;
 	word-wrap: break-word;
 }
@@ -568,13 +586,13 @@ footer {
 	left:0;
 	width:100%;
 	padding-top: 30px;
-	background-color: white;
+	background-color: rgba(128,128,128,0.49);
 	height: 130px;
 }
 #chatform {
 	width:700px;
 	margin: 0 auto;
-	background-color: white;
+	background-color: black;
 }
 
 #message {
@@ -584,11 +602,11 @@ footer {
 	float:left;
 	margin: 0 auto;
 	background-color: #f9f9f9;
-	border: 1px solid #cccccc;
+	border: 1px solid #1abc9c;
 	border-radius: 2px;
 	padding-left: 20px;
 	padding-top: 20px;
-	resize: none;
+	resize: inherit;
 	font:inherit;
 	color:inherit;
 }
@@ -598,11 +616,10 @@ footer {
 	height: 60px;
 	float:right;
 	text-align:center;
-	background-color: #73b4d4;
+	background-color: #1abc9c;
 	display: block;
 	margin: 0 auto;
 	border: none;
-	box-shadow: 3px 3px 3px #efedee;
 	border-radius: 2px;
 	color:white;
 	font-weight: bold;
@@ -610,8 +627,6 @@ footer {
 	outline: none;
 	cursor:pointer;
 }
-
-
 
 
 /* ---------------------- HIDE -------------------------- */
