--- a/views/home.html
+++ b/views/home.html
@@ -9,7 +9,7 @@
 
 <head>
 
-	<title>Typer | Home</title>
+	<title>Loading | Typer</title>
 	<meta http-equiv="Refresh" content="0; url=/create">
 	<link type="text/css" rel="stylesheet" href="css/stylesheet.css" />
 	<link href="http://fonts.googleapis.com/css?family=Open+Sans Condensed:300italic,300,700" rel="stylesheet" type="text/css">
@@ -38,12 +38,8 @@
 			<div id="overlay"></div>
 			<div id="main">
 
-	<header class="homebanner">
-
-				<h1 class="bannertext"><div align="center">Please <span>wait</span> until you're directed to the landing page...</h1>
-</div>
-			
-
+	<header class="banner">
+	<div align="center"><a href="http://typer.im" class="bannerpic"></a></div>
 	</header>
 
 	<section>
