--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -1,3 +1,6 @@
+<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+
 /*------------- Reset browser differences ------------- */
 
 
@@ -15,10 +18,10 @@ body {
     
     
 	color:#9e9e9e;
-	background-image: url('images/bg1.png'); 
+	background-image: url('images/bg2.png'); 
 	background-repeat:no-repeat;
 	background-attachment:fixed;
-	font: 16px/1.3 'Arial',sans-serif;
+	font: 16px/1.3 'Roboto',Lato;
 }​
 }
 
@@ -41,7 +44,7 @@ body {
 .homebannertext {
 	text-align:center;
 	padding-top: 35px;
-	font-family: url('Passion.ttf');
+	font-family: url('Roboto');
 	font-weight: bold;
 	color:white;
 }
@@ -64,16 +67,13 @@ body {
 
 .banner {
 	height: 80px;
-	background-color: rgba(128,128,128,0.49);
-	border-radius: 3px;
-	box-shadow:0px 3px 3px #1ab4bc;
 	margin-bottom: 200px;
 }
 
 .bannertext {
 	text-align:center;
 	padding-top: 15px;
-	font-family: 'Arual';
+	font-family: 'Roboto';
 	font-weight: bold;
 	color:white;
 	font-size:40px;
@@ -114,7 +114,7 @@ body {
 	margin-bottom:120px;
 }
 .node #chat {
-	font-family: 'Open Sans Condensed';
+	font-family: 'Roboto';
 	font-weight: normal;
 	color: #707368;
 }
