--- a/views/home.html
+++ b/views/home.html
@@ -48,7 +48,7 @@
 			</a>
 
 			<div class="tutorial">
-			<a> All Rights Reserved </a>
+			<a> Please wait, Typer is loading.</a>
 			</div>
 		</div>
 
