--- a/views/chat.html
+++ b/views/chat.html
@@ -10,7 +10,7 @@
 
 <head>
 
-	<title>App | Typer</title>
+	<title>Typer.IM - Instant Messaging</title>
 	<script language="JavaScript"> 
 <!-- 
 function fb()
